<resources>

    <!--    activity_1_2_3_4-->
    <string name="app_name">Uni-Task</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--activity_10_11-->
    <string name="discussion_list">Discussion List</string>
    <string name="dialog_delete_title">Warning!!!</string>
    <string name="dialog_delete_msg">Do you want to delete this Assignment?</string>
    <string name="dialog_delete_group">Do you want to delete this Group?</string>
    <string name="dialog_delete_member">Do you want to delete this Member?</string>
    <string name="delete">YES</string>
    <string name="cancel">No</string>

    <!--activity568912-->
    <string name="groupname">Group name</string>
    <string name="gi">Group introduction</string>
    <string name="addmember">Add group member</string>
    <string name="back">back</string>
    <string name="key_word">key word</string>
    <string name="search">search</string>
    <string name="history">history</string>
    <string name="clear_history">clear history</string>
    <string name="adddata">Add Data</string>
    <!--    <string name="dialog_delete_title">Delete an item</string>-->
    <!--    <string name="dialog_delete_msg">Do you want to delete this item?</string>-->
    <!--    <string name="delete">Delete</string>-->
    <!--    <string name="cancel">Cancel</string>-->
    <string name="edit">Edit</string>
    <string name="goup_list">Goup list</string>
    <string name="submit">submit</string>
    <string name="add_asignment">ADD ASIGNMENT</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="task_name">Task Name</string>
    <string name="create_task">Create Task</string>
    <string name="plus">+</string>
    <string name="assignment_list">Assignment List</string>
    <string name="empty_name">Empty Name</string>
    <string name="todo">TODO</string>
    <string name="group_member_list">Group Member List</string>
    <string name="next_step">Next Step</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint_text">search</string>
</resources>